[gd_scene load_steps=58 format=3 uid="uid://gfbiiwln0xuq"]

[ext_resource type="Texture2D" uid="uid://bb0em6uumoc60" path="res://assets/animations/Jump (32x32).png" id="1_3ro8r"]
[ext_resource type="Script" uid="uid://c0qd7pc53bexg" path="res://scenes/player/main_character.gd" id="1_f0cd4"]
[ext_resource type="Texture2D" uid="uid://b2haqr33hu663" path="res://assets/animations/Double Jump (32x32).png" id="2_ef5tu"]
[ext_resource type="Texture2D" uid="uid://cjrxumrp3rlpd" path="res://assets/animations/Idle (32x32).png" id="2_fxtol"]
[ext_resource type="Texture2D" uid="uid://iinrhtxyt3tt" path="res://assets/animations/Run (32x32).png" id="4_ra4ln"]
[ext_resource type="Texture2D" uid="uid://nhkodp8aon8i" path="res://assets/jetPack_assets/Black Fuel Bar.png" id="5_32744"]
[ext_resource type="Texture2D" uid="uid://c6osdpmp1wupy" path="res://assets/jetPack_assets/Jetpack.png" id="5_cqrd6"]
[ext_resource type="Texture2D" uid="uid://bikk0rhg5ljr6" path="res://assets/jetPack_assets/Green Fuel Bar.png" id="6_xkcvd"]
[ext_resource type="Texture2D" uid="uid://bq2ppabrfqo3k" path="res://assets/jetPack_assets/jetpack_fuel_bar_over_2.png" id="7_j33pw"]
[ext_resource type="PackedScene" uid="uid://bg3om3a8j0jcs" path="res://scenes/player/gun.tscn" id="7_sbkl8"]
[ext_resource type="Texture2D" uid="uid://c8c3parlh5gmv" path="res://assets/jetPack_assets/jetpack_fuel_bar_over_1.png" id="8_ef5tu"]
[ext_resource type="Script" uid="uid://dmggvj1pgxqwd" path="res://scenes/components/health_component.gd" id="10_55fil"]
[ext_resource type="Script" uid="uid://j6j62ssymkyx" path="res://scenes/player/follow_cam.gd" id="10_tft1s"]
[ext_resource type="Script" uid="uid://bvgrkmsq3wykq" path="res://scenes/components/hurtbox_component.gd" id="11_ex3f7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_12w03"]
atlas = ExtResource("2_ef5tu")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e6twp"]
atlas = ExtResource("2_ef5tu")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pxd0v"]
atlas = ExtResource("2_ef5tu")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k4mop"]
atlas = ExtResource("2_ef5tu")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fyudl"]
atlas = ExtResource("2_ef5tu")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rw20p"]
atlas = ExtResource("2_ef5tu")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e5noq"]
atlas = ExtResource("2_fxtol")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ip410"]
atlas = ExtResource("2_fxtol")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eqncn"]
atlas = ExtResource("2_fxtol")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sf7nm"]
atlas = ExtResource("2_fxtol")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ooq7"]
atlas = ExtResource("2_fxtol")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pd687"]
atlas = ExtResource("2_fxtol")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_caiak"]
atlas = ExtResource("2_fxtol")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mv3w6"]
atlas = ExtResource("2_fxtol")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_00rov"]
atlas = ExtResource("2_fxtol")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wxrqv"]
atlas = ExtResource("2_fxtol")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_va5qi"]
atlas = ExtResource("2_fxtol")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d27ou"]
atlas = ExtResource("4_ra4ln")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nvuy8"]
atlas = ExtResource("4_ra4ln")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_77tf8"]
atlas = ExtResource("4_ra4ln")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nnc0n"]
atlas = ExtResource("4_ra4ln")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_twntl"]
atlas = ExtResource("4_ra4ln")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wquct"]
atlas = ExtResource("4_ra4ln")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c7xkq"]
atlas = ExtResource("4_ra4ln")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mckob"]
atlas = ExtResource("4_ra4ln")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gsvwf"]
atlas = ExtResource("4_ra4ln")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2p1u6"]
atlas = ExtResource("4_ra4ln")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ywdmd"]
atlas = ExtResource("4_ra4ln")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_om1og"]
atlas = ExtResource("4_ra4ln")
region = Rect2(352, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_033gq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_12w03")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e6twp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pxd0v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k4mop")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fyudl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rw20p")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e5noq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ip410")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eqncn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sf7nm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ooq7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pd687")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_caiak")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mv3w6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_00rov")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wxrqv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_va5qi")
}],
"loop": true,
"name": &"default",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_3ro8r")
}],
"loop": true,
"name": &"jumping",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d27ou")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvuy8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_77tf8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nnc0n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_twntl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wquct")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c7xkq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mckob")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gsvwf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2p1u6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ywdmd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_om1og")
}],
"loop": true,
"name": &"running",
"speed": 20.0
}]

[sub_resource type="Gradient" id="Gradient_8u2io"]
offsets = PackedFloat32Array(0, 0.484293, 1)
colors = PackedColorArray(1, 0.820167, 0.17, 1, 1, 0.138922, 0.118562, 1, 0.42, 0.3906, 0.39942, 0.580392)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_bvab4"]
gradient = SubResource("Gradient_8u2io")

[sub_resource type="Curve" id="Curve_ettun"]
_data = [Vector2(0, 0.504647), 0.0, 0.0, 0, 0, Vector2(0.990244, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_hq3xt"]
curve = SubResource("Curve_ettun")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_3ysfk"]
particle_flag_disable_z = true
gravity = Vector3(0, 98, 0)
scale_min = 6.0
scale_max = 37.39
scale_curve = SubResource("CurveTexture_hq3xt")
color_ramp = SubResource("GradientTexture1D_bvab4")

[sub_resource type="Animation" id="Animation_vivmo"]
length = 0.001
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%JetPackFuelBar:texture_over")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [null]
}

[sub_resource type="Animation" id="Animation_2cqfq"]
resource_name = "new_animation"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%JetPackFuelBar:texture_over")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("7_j33pw"), ExtResource("8_ef5tu")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yaehf"]
_data = {
&"RESET": SubResource("Animation_vivmo"),
&"jetpack_empty": SubResource("Animation_2cqfq")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c8qxn"]
size = Vector2(22, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0i5t5"]
size = Vector2(24, 26)

[sub_resource type="Animation" id="Animation_4rl1q"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_wjffm"]
resource_name = "hit_flash"
length = 0.4
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 0, 0, 0.537255), Color(1, 0, 0, 0.537255), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vkqab"]
_data = {
&"RESET": SubResource("Animation_4rl1q"),
&"hit_flash": SubResource("Animation_wjffm")
}

[node name="Player" type="CharacterBody2D" groups=["Player"]]
collision_layer = 2
script = ExtResource("1_f0cd4")

[node name="PlayerSprite" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_033gq")
autoplay = "default"

[node name="PlayerJetpack" type="Sprite2D" parent="PlayerSprite"]
unique_name_in_owner = true
show_behind_parent = true
position = Vector2(7.62939e-06, 1.66667)
scale = Vector2(0.0462227, 0.0564102)
texture = ExtResource("5_cqrd6")

[node name="Left Jetpack Nozzle" type="GPUParticles2D" parent="PlayerSprite/PlayerJetpack"]
unique_name_in_owner = true
position = Vector2(-115.383, 200)
emitting = false
amount = 50
one_shot = true
process_material = SubResource("ParticleProcessMaterial_3ysfk")

[node name="Right Jetpack Nozzle" type="GPUParticles2D" parent="PlayerSprite/PlayerJetpack"]
unique_name_in_owner = true
position = Vector2(108.172, 200)
emitting = false
amount = 50
one_shot = true
process_material = SubResource("ParticleProcessMaterial_3ysfk")

[node name="JetpackRefuelTimer" type="Timer" parent="PlayerSprite/PlayerJetpack"]
unique_name_in_owner = true
one_shot = true

[node name="Gun" parent="PlayerSprite" instance=ExtResource("7_sbkl8")]
unique_name_in_owner = true
position = Vector2(0, 10)
scale = Vector2(0.5, 0.5)

[node name="GunSprite" parent="PlayerSprite/Gun" index="0"]
position = Vector2(-1, -5)

[node name="JetpackEmptyAnim" type="AnimationPlayer" parent="PlayerSprite"]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_yaehf")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_c8qxn")

[node name="JetPackFuelBar" type="TextureProgressBar" parent="."]
unique_name_in_owner = true
offset_left = -15.0
offset_top = -20.0
offset_right = 21.0
offset_bottom = -17.0
value = 100.0
texture_under = ExtResource("5_32744")
texture_progress = ExtResource("6_xkcvd")

[node name="FollowCam" type="Camera2D" parent="."]
limit_left = 0
limit_top = 0
script = ExtResource("10_tft1s")

[node name="PlayerHurtbox" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 8

[node name="PlayerCollisionShape" type="CollisionShape2D" parent="PlayerHurtbox"]
unique_name_in_owner = true
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_0i5t5")

[node name="HitFlash" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_vkqab")
}

[node name="HurtTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 2.0
one_shot = true

[node name="PlayerRespawnTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="KnockbackTimer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="health_component" type="Node" parent="." node_paths=PackedStringArray("hurt_box")]
script = ExtResource("10_55fil")
health = 100.0
hurt_box = NodePath("../hurtBox")
metadata/_custom_type_script = "uid://dmggvj1pgxqwd"

[node name="hurtBox" type="Node" parent="." node_paths=PackedStringArray("area2D")]
script = ExtResource("11_ex3f7")
area2D = NodePath("../PlayerHurtbox")
metadata/_custom_type_script = "uid://bvgrkmsq3wykq"

[connection signal="died" from="health_component" to="." method="_on_health_component_died"]
[connection signal="knockback" from="hurtBox" to="." method="_on_hurt_box_knockback"]

[editable path="PlayerSprite/Gun"]
